<resources>
    <string name="app_name">Pantau Covid19</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="title_home">Beranda</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="selalu_jaga_kesehatan">Selalu Jaga Kesehatan</string>
    <string name="lihat_keadaan_sekitar_kamu_nselalu_memakai_masker_apabila_nkamu_pergi_keluar_rumah">Lihat keadaan di lingkungan kamu, \nselalu memakai masker apabila \nkamu pergi keluar rumah.</string>
    <string name="update_terkini">Update Terkini</string>
    <string name="_9_juli_2020">9 Juli 2020</string>
    <string name="_450">475</string>
    <string name="kasus">Total Kasus</string>
    <string name="_20">20</string>
    <string name="sembuh">Sembuh</string>
    <string name="meninggal">Meninggal</string>
    <string name="_38">38</string>
    <string name="pdp">PDP</string>
    <string name="_2365">2365</string>
    <string name="_22">22</string>
    <string name="kasus_baru">Kasus Baru</string>
    <string name="odp">ODP</string>
    <string name="dalam">Dalam</string>
    <string name="perawatan">Perawatan</string>
    <string name="layanan_darurat">Layanan Lainnya</string>
    <string name="nomor_darurat">Nomor Darurat</string>
    <string name="data_provinsi">Data Provinsi</string>
    <string name="seputar_covid">Seputar Covid</string>
    <string name="rumah_sakit">Rumah Sakit</string>
    <string name="apakah_anda_sudah_mencuci_ntangan_anda_hari_ini">Apakah anda sudah mencuci \ntangan anda hari ini ?</string>
    <string name="kasus_negatif">Kasus Negatif</string>
    <string name="jawa_barat">Jawa Barat</string>
    <string name="kasus_positif">Kasus Positif</string>
    <string name="rumah_sakit_al_ihsan">Rumah Sakit Al Ihsan</string>
    <string name="jalan_dago_no_15_bandung">Jalan Dago No 15 Bandung</string>
    <string name="artikel">Artikel</string>
    <string name="info_covid">Seputar Covid</string>
    <string name="apaitu_ncov">Apa itu nCov ?</string>
    <string name="isi_info_satu">
        <p>
            Novel Corona Virus(2019-nCoV) adalah jenis baru coronavirus yang belum pernah diidentifikasi sebelumnya oleh manusia.
            Coronavirus merupakan keluarga besar virus yang menyebabkan penyakit pada manusia dan hewan. Pada manusia menyebabkan penyakit mulai flu biasa
            hingga penyakit serius seperti Middle East Respiratory Syndrome(MERS) dan sindrom pernapasan Aku berat / Severe Acute Respiratory Syndrome(SARS).
        </p>
    </string>
    <string name="bagaimana_mencegah_ncov">Bagaimana cara mencega penularan COVID-19 ? </string>
    <string name="isi_info_dua">
        <p>
            Hingga saat ini, belum ada vaksin untuk mencegah penularan nCoV. Namun, bukan berarti kita tidak bisa berkontribusi untuk mencegah penularan
            penyakit ini, salah satu cara mencegah penyebaran virus ini adalah :
            \n
            \n1.<b>Menjaga</b> kesehatan dan kebugaran.
            \n2.Sering <b>mencuci tangan</b> menggunakan sabun.
            \n3.Ketika <b>batuk/bersin</b> tutup menggunakan lengan.
            \n4.<b>Jangan menyentuh</b> mata, hidung, atau mulut.
            \n5.<b>Gunakan</b> masker dan <b>hindari</b> keramaian.
        </p>
    </string>
    <string name="isi_info_tiga">
        Jika anda <b>hamil</b> atau memiliki <b>kondisi kronis</b>, Anda <b>harus</b> mengenakan masker saat pergi ke luar
        \nJika anda memiliki gejala <b>demam</b>, <b>batuk</b>, atau <b>gejala pernapsan</b> , tolong jangan lepaskan masker anda
    </string>
    <string name="putar_video">Putar Video</string>
    <string name="artikel">Artikel</string>
    <string name="periksa_mandiri">Periksa Mandiri</string>
    <string name="periksa_mandiri_diri_anda_melalui_apps">Periksa mandiri diri anda melalui apps</string>
    <string name="jangan_khawatir_data_anda_tidak_akan_disebar">Jangan khawatir, data anda tidak akan disebar</string>
    <string name="mulai_periksa_mandiri">Mulai Periksa Mandiri</string>
    <string name="pertanyaan_ke_1">Pertanyaan Ke 1</string>
    <string name="iya">Iya</string>
    <string name="selesai">Selesai</string>
</resources>
