<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="16dp"
    android:layout_marginTop="8dp"
    android:layout_marginEnd="16dp"
    android:layout_marginBottom="8dp"
    app:cardBackgroundColor="#222B45"
    app:cardCornerRadius="12dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imageViewInfo"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="26dp"
            android:src="@drawable/information"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txtJudulInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Seputar Covid"
            android:textSize="36dp"
            android:textColor="@android:color/white"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            app:layout_constraintBottom_toBottomOf="@+id/imageViewInfo"
            app:layout_constraintStart_toEndOf="@+id/imageViewInfo"
            app:layout_constraintTop_toTopOf="@+id/imageViewInfo" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cvInfo1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="16dp"
            app:cardBackgroundColor="@android:color/white"
            app:cardCornerRadius="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtJudulInfo">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="240dp"
                        android:src="@drawable/jaga_kesehatan"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="14dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginEnd="16dp"
                        android:text="@string/apaitu_ncov"
                        android:textColor="@android:color/black"/>

                    <TextView
                        android:layout_marginTop="16dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="12dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginEnd="16dp"
                        android:textColor="@android:color/black"
                        android:text="@string/isi_info_satu"/>

                    <TextView
                        android:layout_marginTop="16dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="14dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginEnd="16dp"
                        android:text="@string/bagaimana_mencegah_ncov"
                        android:textColor="@android:color/black"/>

                    <TextView
                        android:layout_marginTop="16dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="12dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginEnd="16dp"
                        android:textColor="@android:color/black"
                        android:text="@string/isi_info_dua"/>

            </LinearLayout>

        </androidx.cardview.widget.CardView>




    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>